# people-tracker-ai

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  labels.py  pyproject.toml  run.sh
src/: main.py
static/: client.html
