[project]
name = "ai-sirius-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Denis Romodanov",email = "darvenomm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "ultralytics (>=8.3.130,<9.0.0)",
    "deep-sort-realtime (>=1.3.2,<2.0.0)",
    "sse-starlette (>=2.3.4,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
